--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,10 +19,13 @@ dependencies = [
     "scikit-learn==1.5.2",
     "scipy==1.14.1",
     "segmentation-models-pytorch==0.3.3",
+    "torch==2.0.1",
+    "torchaudio==2.0.2",
+    "torchvision==0.15.2",
     # "setuptools>=75.1.0",
-    "torch[cu118]==2.0.1",
-    "torchaudio[cu118]==2.0.2",
-    "torchvision[cu118]==0.15.2",
+    # "torch[cu118]==2.0.1",
+    # "torchaudio[cu118]==2.0.2",
+    # "torchvision[cu118]==0.15.2",
     "tqdm==4.64.1",
     "wandb==0.13.7",
 ]
